<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:background="@color/white"
        android:id="@+id/frame_container"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="15dp"
            android:id="@+id/layout_container"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_personal_information"
                android:textColor="@color/primary_text"
                android:visibility="gone"
                android:background="@color/windows_backgroung"
                android:textSize="@dimen/primary_text"
                android:text="@string/personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_error"
                android:textColor="@color/red"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone"
                android:textSize="@dimen/secondary_text"
                android:text="@string/personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                <EditText
                    android:padding="15dp"
                    android:textColor="@color/primary_text"
                    android:maxLines="1"
                    android:id="@+id/ed_first_name"

                    android:textSize="@dimen/primary_text"
                    android:hint="@string/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                <EditText
                    android:padding="15dp"
                    android:textColor="@color/primary_text"
                    android:maxLines="1"
                    android:id="@+id/ed_last_name"
                    android:textSize="@dimen/primary_text"
                    android:hint="@string/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>




        </LinearLayout>

    </FrameLayout>
</LinearLayout>