<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:id="@+id/frame_container"
        android:weightSum="1"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layout_load"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center|center_horizontal"
                android:id="@+id/pb_load" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:id="@+id/tv_load"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_gravity="center_vertical|center|center_horizontal"
                android:visibility="visible" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <TextView
                android:id="@+id/tvText"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:textColor="@color/red"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <EditText
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/email"
                        android:textSize="@dimen/primary_text"
                        android:inputType="textEmailAddress"
                        android:id="@+id/et_email"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_password"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <EditText
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        style="@style/editText"
                        android:id="@+id/et_password"
                        android:textSize="@dimen/primary_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/Btn"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/primary_text"
                android:layout_marginBottom="10dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTextMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Ó"
                    android:textColor="@color/primary_text"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="11dp"
                    android:layout_toLeftOf="@id/tvTextMiddle"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="11dp"
                    android:layout_toRightOf="@id/tvTextMiddle"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>


            <Button
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:id="@+id/login_facebook"
                style="@style/com_facebook_loginview_default_style"
                android:textColor="@color/white"
                android:background="@drawable/button_facebook"
                android:text="@string/login_facebook"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="17dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="4dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:id="@+id/tv_create_account"
                        android:text="@string/create_account"
                        android:textSize="@dimen/aux_text" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:layout_marginRight="5dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:id="@+id/tv_recover_password"
                        android:gravity="right"
                        android:visibility="gone"
                        android:text="@string/recover_password"
                        android:textSize="@dimen/aux_text" />
            </LinearLayout>
        </LinearLayout>




    </FrameLayout>

    <!-- app:counterOverflowTextAppearance="@style/CounterOverFlow"
                   app:counterTextAppearance="@style/Counter"
                   app:counterEnabled="true"
                       app:counterMaxLength="8"
                   app:hintTextAppearance="@style/Hint"-->
</LinearLayout>